tests/lexer/invalid-token.stderr
error: unknown token
 --> ../tests/lexer/invalid-token.lox:1:1
  |
1 | @
  | ^
